# aleph.js

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PERMISSIONS  README.md  aleph.ts  anchor.ts  api.ts  app.ts  bootstrap.ts  bump.ts  cli.ts  context.ts  data.ts  deno.dom.json  deno.json  deps.test.ts  deps.ts  dev.ts  egg.json  error.ts  events.ts  fs.ts  head.ts  hmr.ts  hooks.ts  html.ts  import.ts  import_map.json  importor.ts  init.ts  install.ts  link.ts  log.ts  mime.ts  mod.ts  multiparser.ts  (+21 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
__/: dev.ts  serve.ts
_commands/: cli.ts
bundler/: esbuild.ts  mod.ts  mod_test.ts
cli/: analyze.ts  build.ts  dev.ts  fetch.ts  importmap.ts  importmap_test.ts  init.ts  start.ts  upgrade.ts
commands/: analyze.ts  build.ts  dev.ts  init.ts  start.ts  upgrade.ts
compiler/: Cargo.toml  README.md  aleph_swc_wasm.js  aleph_swc_wasm_checksum.js  banchmark.ts  benchmark.ts  build.ts  css.ts  css_test.ts  mod.ts  rustfmt.toml  types.d.ts  types.ts  wasm-checksum.js  wasm-pack.js  wasm.js
compiler/ployfills/es5/: ployfill.js
compiler/polyfills/es2015/: mod.ts
compiler/polyfills/es5/: mod.ts  polyfill.js  polyfill.ts  regenerator-runtime.ts
compiler/src/: aleph.rs  compat_fixer.rs  css.rs  error.rs  export_names.rs  expr_utils.rs  fast_refresh.rs  fixer.rs  hmr.rs  import_map.rs  jsx.rs  jsx_attr.rs  jsx_magic.rs  lib.rs  minifier.rs  resolve.rs  resolve_fold.rs  resolver.rs  source_type.rs  strip_ssr.rs  swc.rs  swc_helpers.rs  tests.rs
core/: project.ts  server.ts  types.ts  util.ts
design/: aleph_canvas.ai  banner_twtter.ai  github_avatar.psd  logo.ai  poster.ai  twtter_card.ai
examples/leptos-app/: Cargo.toml  dev.ts  index.html  main.ts  server.ts
examples/leptos-app/pkg/: client.js  client_bg.wasm  server.js  server_bg.wasm
examples/leptos-app/src/: lib.rs  routes.rs
examples/leptos-app/src/routes/: index.rs
examples/with-unocss/yew-app/: Cargo.toml  dev.ts  index.html  server.ts  unocss.config.ts
examples/with-unocss/yew-app/pkg/: yew_app.js  yew_app_bg.wasm
examples/with-unocss/yew-app/src/: app.rs  components.rs  lib.rs  routes.rs
examples/with-unocss/yew-app/src/components/: header.rs
examples/with-unocss/yew-app/src/routes/: _404.rs  index.rs  todos.rs
examples/yew-app/: .gitignore  Cargo.toml  README.md  build.ts  dev.ts  index.html  main.ts  server.ts
examples/yew-app/pkg/: yew_app.js  yew_app_bg.wasm
examples/yew-app/src/: app.rs  lib.rs  routes.rs  shared.rs
examples/yew-app/src/components/: header.rs
examples/yew-app/src/routes/: _404.rs  index.rs  todos.rs
examples/yew-app/style/: app.css  reset.css
framework/: mod.ts
image/: Dockerfile
lib/: cache.ts  crypto.ts  flags.ts  fs.ts  helpers.ts  html.ts  log.ts  media_type.ts  mime.ts  nomodule.js  nomodule.ts  path.ts  route.ts  serve.ts  url.ts  util.ts
loaders/: solid.ts  vue.ts
plugins/: css.ts  css_test.ts  deploy.ts  env  env_test.ts  json.ts  markdown.ts  markdown_test.ts  mdx.ts  sass.ts  sass_test.ts  unocss.ts  wasm.ts  wasm_test.ts
server/: aleph.ts  analyzer.ts  api.ts  app.ts  build.ts  bundle.ts  bundle_css.ts  bundler.ts  cache.ts  compress.ts  config.ts  context.ts  css.ts  css_test.ts  deps.ts  dev.ts  error.ts  generate.ts  graph.ts  handler.ts  helper.ts  helper_test.ts  helpers.ts  html.ts  importmap.ts  localproxy.ts  log.ts  media_type.ts  mime.ts  mock.ts  mod.ts  multiparser.ts  multiparser_test.ts  native.ts  negotiation.ts  oak.ts  optimizer.ts  project.ts  proxy_modules.ts  render.ts  (+18 more)
shared/: cache.ts  constants.ts  crypto.ts  flags.ts  fs.ts  fs_test.ts  log.ts  path.ts  types.ts  util.ts  util_test.ts
src/: project.ts  project_test.ts
swc/: Cargo.toml  README.md  aleph_swc.js  aleph_swc.wasm.js  aleph_swc_wasm.js  aleph_swc_wasm_checksum.js  banchmark.ts  build.sh  build.ts  mod.ts  test.ts
swc/src/: aleph.rs  error.rs  fast_refresh.rs  import_map.rs  jsx.rs  lib.rs  media_type.rs  resolve.rs  source_type.rs  sourcetype.rs  swc.rs
swc/tests/: README.md  comp-HOC-like-0.js  comp-HOC-like-1.js  comp-HOC-like-2.js  comp-HOC-like-ignored.js  comp-detect-by-usage-HOC.js  comp-detect-by-usage-JSX.js  comp-detect-by-usage-React.createElement.js  comp-detect-by-usage-ignore-require.js  comp-export-fn-arrow.js  comp-export-fn-dec.js  comp-export-ignore-unnamed-dec.js  comp-fn-ignore-complex.js  comp-fn-ignore-hoc.js  comp-fn-lowercased.js  comp-fn-reassigned.js  comp-local-fn-arrow.js  comp-local-fn-dec.js  comp-local-fn-expr.js  hooks-HOC.js  hooks-concise-arrow-fn.js  hooks-custom-commonjs.js  hooks-custom.js  hooks-fn-decl.js  hooks-reset-comment.js  hooks-signature-exotic-ways.js  hooks-track-fail.js  hooks-track-imported.js  hooks-track-local.js  hooks-track-not-found.js  hooks-useCallback.js  hooks-useContext.js  hooks-useCustom.js  hooks-useDebugValue.js  hooks-useEffect.js  hooks-useImperativeHandle.js  hooks-useLayoutEffect.js  hooks-useMemo.js  hooks-useReducer.js  hooks-useRef.js  (+2 more)
swc/tests/__snapshots__/: comp-HOC-like-0.js  comp-HOC-like-1.js  comp-HOC-like-2.js  comp-HOC-like-ignored.js  comp-detect-by-usage-HOC.js  comp-detect-by-usage-JSX.js  comp-detect-by-usage-React.createElement.js  comp-detect-by-usage-ignore-require.js  comp-export-fn-arrow.js  comp-export-fn-dec.js  comp-export-ignore-unnamed-dec.js  comp-fn-ignore-complex.js  comp-fn-ignore-hoc.js  comp-fn-lowercased.js  comp-fn-reassigned.js  comp-local-fn-arrow.js  comp-local-fn-dec.js  comp-local-fn-expr.js  hooks-HOC.js  hooks-concise-arrow-fn.js  hooks-custom-commonjs.js  hooks-custom.js  hooks-fn-decl.js  hooks-reset-comment.js  hooks-signature-exotic-ways.js  hooks-track-fail.js  hooks-track-imported.js  hooks-track-local.js  hooks-track-not-found.js  hooks-useCallback.js  hooks-useContext.js  hooks-useCustom.js  hooks-useDebugValue.js  hooks-useEffect.js  hooks-useImperativeHandle.js  hooks-useLayoutEffect.js  hooks-useMemo.js  hooks-useReducer.js  hooks-useRef.js  hooks-useState.js  (+1 more)
test/: multiparser_test.ts  routing_test.ts
tests/: mock.ts  (+26 more)
(+439 files in other folders)
