[package]
name = "aleph-compiler"
version = "0.3.0"
description = "The compiler of Aleph.js written in rust and powered by swc."
repository = "https://github.com/alephjs/aleph.js"
authors = ["The Aleph.js authors"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.53"
indexmap = "1.8.0"
path-slash = "0.1.4"
regex = "1.5.4"
sha-1 = "0.10.0"
base64 = "0.13.0"
relative-path = "1.6.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
url = "2.2.2"
lazy_static = "1.4.0"

# parcel css
cssparser = "0.29.2"
parcel_css = "1.0.0-alpha.16"
parcel_sourcemap = "2.0.2"

# swc
# docs: https://swc.rs
# crate: https://crates.io/search?q=swc
swc_atoms = "0.2.9"
swc_common = { version = "0.17.7", features = ["sourcemap"] }
swc_ecma_ast = "0.65.4"
swc_ecma_transforms_proposal = "0.77.0"
swc_ecma_transforms_typescript = "0.82.0"
swc_ecma_utils = "0.65.3"
swc_ecma_visit = "0.51.1"
swc_ecmascript = { version = "0.114.2", features = ["codegen", "parser", "react", "transforms", "visit"] }

# wasm-bindgen
# docs: https://rustwasm.github.io/docs/wasm-bindgen
wasm-bindgen = {version = "0.2.79", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.56"

[profile.release]
# Tell `rustc` to optimize for speed and size
lto = true
