[package]
name = "aleph-compiler"
version = "0.3.0"
description = "The compiler of Aleph.js written in Rust."
repository = "https://github.com/alephjs/aleph.js"
authors = ["The Aleph.js authors"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.53"
base64 = "0.13.0"
indexmap = "1.8.0"
lazy_static = "1.4.0"
path-slash = "0.1.4"
regex = "1.5.4"
relative-path = "1.6.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha-1 = "0.10.0"
url = "2.2.2"

# parcel css
cssparser = "0.29.2"
parcel_css = "1.0.0-alpha.17"
parcel_sourcemap = "2.0.2"

# swc
# docs: https://swc.rs
# crate: https://crates.io/search?q=swc
swc_atoms = "0.2.9"
swc_common = { version = "0.17.9", features = ["sourcemap"] }
swc_ecma_ast = "0.68.3"
swc_ecma_transforms_proposal = "0.81.0"
swc_ecma_transforms_typescript = "0.86.0"
swc_ecma_utils = "0.68.0"
swc_ecma_visit = "0.54.0"
swc_ecmascript = { version = "0.120.0", features = ["codegen", "parser", "react", "transforms", "visit"] }

# wasm-bindgen
# docs: https://rustwasm.github.io/docs/wasm-bindgen
wasm-bindgen = {version = "0.2.79", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.56"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for speed and size
lto = true
