[package]
name = "aleph-compiler"
version = "0.3.0"
description = "The compiler of Aleph.js written in Rust."
repository = "https://github.com/alephjs/aleph.js"
authors = ["The Aleph.js authors"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.56"
base64 = "0.13.0"
import_map = "0.9.0"
indexmap = "1.8.0"
lazy_static = "1.4.0"
path-slash = "0.1.4"
pathdiff = "0.2.1"
regex = "1.5.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
url = "2.2.2"

# parcel css
cssparser = "0.29.2"
parcel_css = "1.0.0-alpha.20"
parcel_sourcemap = "2.0.2"

# swc
# docs: https://swc.rs
# crate: https://crates.io/search?q=swc_ecmascript
swc_atoms = "0.2.10"
swc_common = { version = "0.17.18", features = ["sourcemap"] }
swc_ecma_transforms = { version = "0.138.0", features = ["proposal", "typescript", "react" ] }
swc_ecmascript = { version = "0.139.0", features = ["codegen", "parser", "utils", "visit"] }

# wasm-bindgen
# docs: https://rustwasm.github.io/docs/wasm-bindgen
wasm-bindgen = {version = "0.2.79", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.56"

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for speed and size
lto = true
