[package]
name = "aleph-swc"
version = "0.0.1"
authors = ["The Aleph.js authors"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
indexmap = "1.6.0"
lazy_static = "1.4.0"
once_cell = "1.5.2"
path-slash = "0.1.3"
pathdiff = "0.2.0"
rand = { version = "0.7.3", features = ["wasm-bindgen"]}
regex = "1.4.2"
relative-path = "1.3.2"
serde = { version = "1.0.117", features = ["derive"] }
url = "2.2.0"

# swc
# docs: https://swc.rs
swc_common = { version = "0.10.5", features = ["sourcemap"] }
swc_ecmascript = { version = "0.13.3", features = ["codegen", "dep_graph", "parser", "react", "transforms", "visit"] }
swc_ecma_ast = "0.34.0"
swc_ecma_visit = "0.20.0"
swc_ecma_utils = "0.24.0"

# wasm-bindgen
# docs: https://rustwasm.github.io/docs/wasm-bindgen
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
console_error_panic_hook = { version = "0.1.6", optional = true }

[profile.release]
# Tell `rustc` to optimize for speed
lto = true
