[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew.git", features = ["ssr", "hydration"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
wasm-bindgen = { version = "0.2.81", features = ["strict-macro"] }
wasm-bindgen-futures = "0.4.31"
web-sys = "0.3.58"
url = "2.2.2"
